--- a/news6.html
+++ b/news6.html
@@ -55,9 +55,7 @@
 
 <main>
 
-<div style="text-align: center; padding: 25px 0px;"> 
-	<h1> News (6) </h1> 
-</div>
+
 
 <div class="container px-4 px-lg-5">
 	<div class="row gx-0 mb-4 mb-lg-5 align-items-center">
@@ -92,7 +90,7 @@
 		</div>
 	</div>
 	<div style="text-align: center">
-		<a href="news5.html" class="btn btn-primary my-2 news_button"> 	&#129056; News precedente</a>
+		<a href="news5.html" class="btn btn-primary my-2 news_button"> News precedente</a>
 	<div>
 </div>
 
