--- a/news1.html
+++ b/news1.html
@@ -57,14 +57,14 @@
 <main>
 
 <div style="text-align: center; padding: 25px 0px;"> 
-	<h1> News (1) </h1> 
+	<h1> Open days gratuiti </h1> 
 </div>
 
 <div class="container px-4 px-lg-5 mb-3">
 	<div class="row gx-0 mb-4 mb-lg-5 align-items-center">
 		<div class="col-lg-6 mb-2">
 			<div class="featured-text text-lg-left">
-				<h4>Ti aspettiamo! OPEN DAYS Gratuiti!</h4>				
+				<h4>Ti aspettiamo! </h4>				
 				<p class="text-muted"> 24 settembre 2021 </p>
 				<p> Ti aspettiamo! OPEN DAYS Gratuiti! <br>
 					Date: </p>
@@ -88,7 +88,7 @@
 		</div>
 	</div>
 	<div style="text-align: center">		
-		<a href="news2.html" class="btn btn-primary my-2 news_button"> 	News successiva &#129058;</a>
+		<a href="news2.html" class="btn btn-primary my-2 news_button"> 	News successiva</a>
 	<div>
 </div>
 			
