--- a/news2.html
+++ b/news2.html
@@ -57,14 +57,14 @@
 
 
 <div style="text-align: center; padding: 25px 0px;"> 
-	<h1> News (2) </h1> 
+	<h1> Torniamo in palestra </h1> 
 </div>
 	
 <div class="container px-4 px-lg-5">
 	<div class="row gx-0 mb-4 mb-lg-5 align-items-center">
 		<div class="col-lg-6 mb-2">
 			<div class="featured-text text-lg-left">
-				<h4>Torniamo in palestra!</h4>				
+				<h4> Ripartono i corsi</h4>				
 				<p class="text-muted"> 5 luglio 2021 </p>				  
 				<p> Ripartono i corsi di Ginnastica Artistica da Lunedì 5 Luglio. <br>
 					  OPEN DAYS GRATUITI <br>
@@ -87,8 +87,8 @@
 		</div>
 	</div>
 	<div style="text-align: center">
-		<a href="news1.html" class="btn btn-primary my-2 news_button"> 	&#129056; News precedente</a>
-		<a href="news3.html" class="btn btn-primary my-2 news_button"> 	News successiva &#129058;</a>
+		<a href="news1.html" class="btn btn-primary my-2 news_button">  News precedente</a>
+		<a href="news3.html" class="btn btn-primary my-2 news_button"> 	News successiva</a>
 	<div>
 </div>
 
