--- a/news6.html
+++ b/news6.html
@@ -55,13 +55,15 @@
 
 <main>
 
-
+<div style="text-align: center; padding: 25px 0px;"> 
+	<h1> Campionato Regionale FGI 2021 </h1> 
+</div>
 
 <div class="container px-4 px-lg-5">
 	<div class="row gx-0 mb-4 mb-lg-5 align-items-center">
 		<div class="col-lg-6 mb-2">
 			<div class="featured-text text-lg-left">
-				<h4>Campionato Regionale FGI 2021</h4>				
+				<h4>Classifica aggiornata </h4>				
 				<p class="text-muted"> 10 aprile 2021 </p>
 				<p> Siamo fiere e soddisfatte dei risultati che le nostre ragazze hanno raggiunto durante i nazionali tenuti a Rimini. <br>
         Di seguito riportiamo la classifica dei nostri atleti: <br> </p>
@@ -90,7 +92,7 @@
 		</div>
 	</div>
 	<div style="text-align: center">
-		<a href="news5.html" class="btn btn-primary my-2 news_button"> News precedente</a>
+		<a href="news5.html" class="btn btn-primary my-2 news_button">  News precedente</a>
 	<div>
 </div>
 
