--- a/news3.html
+++ b/news3.html
@@ -56,14 +56,14 @@
 <main>
 
 <div style="text-align: center; padding: 25px 0px;"> 
-	<h1> News (3) </h1> 
+	<h1> Ginnastica in festa Rimini 2021 </h1> 
 </div>
 	
 <div class="container px-4 px-lg-5">
 	<div class="row gx-0 mb-4 mb-lg-5 align-items-center">
 		<div class="col-lg-6 mb-2">
 			<div class="featured-text text-lg-left">
-				<h4>Ginnastica in festa Rimini 2021</h4>				
+				<h4> Classifica aggiornata </h4>				
 				<p class="text-muted"> 29 giugno 2021 </p>
 
         <p> Siamo fiere e soddisfatte dei risultati che le nostre ragazze hanno raggiunto durante i nazionali tenuti a Rimini. <br>
@@ -119,8 +119,8 @@
 		</div>
 	</div>
 	<div style="text-align: center">
-		<a href="news2.html" class="btn btn-primary my-2 news_button"> 	&#129056; News precedente</a>
-		<a href="news4.html" class="btn btn-primary my-2 news_button"> 	News successiva &#129058;</a>
+		<a href="news2.html" class="btn btn-primary my-2 news_button">  News precedente</a>
+		<a href="news4.html" class="btn btn-primary my-2 news_button"> 	News successiva </a>
 	<div>
 </div>
 
