--- a/news4.html
+++ b/news4.html
@@ -56,14 +56,14 @@
 <main>
 
 <div style="text-align: center; padding: 25px 0px;"> 
-	<h1> News (4) </h1> 
+	<h1> Campionati nazionali Endas 2021 </h1> 
 </div>
 
 <div class="container px-4 px-lg-5">
 	<div class="row gx-0 mb-4 mb-lg-5 align-items-center">
 		<div class="col-lg-6 mb-2">
 			<div class="featured-text text-lg-left">
-				<h4>Campionati nazionali Endas 2021</h4>				
+				<h4>Classifica aggiornata </h4>				
 				<p class="text-muted"> 5 giugno 2021 </p>
 				<p> Con grande soddisfazione annunciamo che la nostra società si è aggiudicata il primo posto ai nazionali Endas 2021 tenutosi a Civitavecchia. <p>
 				<p> Ci auguriamo di poter ripetere questo risultato il prossimo anno. </p>
@@ -74,8 +74,8 @@
 		</div>
 	</div>
 	<div style="text-align: center">
-		<a href="news3.html" class="btn btn-primary my-2 news_button"> 	&#129056; News precedente</a>
-		<a href="news5.html" class="btn btn-primary my-2 news_button"> 	News successiva &#129058;</a>
+		<a href="news3.html" class="btn btn-primary my-2 news_button">  News precedente</a>
+		<a href="news5.html" class="btn btn-primary my-2 news_button"> 	News successiva </a>
 	<div>
 </div>
 
